talk about more for slider

--- a/Reports/Final/Drafts/jia.tex
+++ b/Reports/Final/Drafts/jia.tex
@@ -18,7 +18,12 @@ To keep the interface simple and clear, only three parts were used in our simula
 
 Labels including "Number of Cars", "Ticker interval", Traffic Light Duration", "Time Ticked", "Vehicle Time Spent Standing" were set for simulation monitor to help users have a better understand about how is the simulation process going. 
 
-"Start" and "Reset" buttons are used to control whether to start or stop the simulation process. Users can click "Add Ambulance" to add an ambulance whose behavior is aggressive and can also delete it since once an ambulance is added the button will be "Delete Ambulance". There is a "Set Traffic Light duration" button. Once it is clicked, there will be a dialog allows users to set traffic interval(100-1000 millisecond) by a spinner. "Disable Traffic Light" is used to delete all traffic lights of the map and "Enable Traffic Light" to restore all traffic lights to the map. This is to simulate situation in which traffic lights cannot work properly. We used a slider to control number of cars in the system. Users can set number of cars they want as long as  it is in the available range. The minimum car number is 1, and the maximum number is set automatically depends on the overall number of slots of all lanes in the map ($MaxCarNumber=0.6*SlotsNumber$). This means the simulation process won't crash due to too many cars results in no slot is available and to make sure the traffic can be coordinated properly. 
+"Start" and "Reset" buttons are used to control whether to start or stop the simulation process. Users can click "Add Ambulance" to add an ambulance whose behavior is aggressive and can also delete it since once an ambulance is added the button will be "Delete Ambulance". There is a "Set Traffic Light duration" button. Once it is clicked, there will be a dialog allows users to set traffic interval(100-1000 millisecond) by a spinner. "Disable Traffic Light" is used to delete all traffic lights of the map and "Enable Traffic Light" to restore all traffic lights to the map. This is to simulate situation in which traffic lights cannot work properly. 
+
+We used a slider to control number of cars in the system. Users can set number of cars they want as long as  it is in the available range. The minimum car number is 1, and the maximum number is set automatically depends on the overall number of slots of all lanes in the map ($MaxCarNumber=0.6*SlotsNumber$). This means the simulation process won't crash due to too many cars results in no slot is available and to make sure the traffic can be coordinated properly. 
+
+In JavaFX a property is more than just a simple value. Each Property provides methods to observe changes made to its value so that we can listen for changes.The valueProperty of the slider can indicate if the slider is in the process of being changed. And it is an observable property, so we registered a change listener to the slider's valueProperty to know when the slider's value is changing. slider.valueProperty() gives us access to the Property. AddListener(...) expects a ChangeListener of type Number. We created a new class to implement the ChangListener interface. Since we will use this class only once, it's a bit overkill to create an instance of this class and pass it to addListener(...). Instead we used a short form of creating a class and instantiating it which is actually an anonymous inner class that does not have a name. Every time a change occurs, ChangeListener must have a changed(..) method that will be called. Then we decided whether to generate new cars to the system or remove cars from the system by calculating the difference between the oldValue and the newValue of the slider.
+If oldValue is smaller than newValue, new cars $(newValue - oldVlue)$ would be generated to the map. Otherwise, system would delete $(oldValue - newValue)$ cars randomly from the vehicle list. 
 
 \section{Teamwork}
 
