Upadates to final report, and added image

--- a/Reports/Final/literature.bib
+++ b/Reports/Final/literature.bib
@@ -50,14 +50,14 @@ month={},}
 	Title = {Urban Traffic Simulation With Psycho-physical Vehicle-following Models},
 	Year = {1997},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1109/WSC.1997.641015}}
-
-@webpage{macrosim,
-	Date-Added = {2016-03-28 05:43:41 +0000},
-	Date-Modified = {2016-03-28 05:47:08 +0000},
-	Lastchecked = {28 March 2016},
-	Month = {February },
-	Url = {https://en.wikipedia.org/wiki/Macroscopic_traffic_flow_model},
-	Year = {2015}}
+	
+@Misc{macrosim,
+title = {Macroscopic Traffic Flow Model},
+howpublished = {\url{https://en.wikipedia.org/wiki/Macroscopic_traffic_flow_model}},
+month = {February},
+year = {2015},
+note = {Accessed: 28 March 2016},
+}
 
 @proceedings{Sewall,
 	Author = {J. Sewall and D. Wilkie and P. Merrell and M. C. Lin},
@@ -70,11 +70,42 @@ month={},}
 	Volume = {29},
 	Year = {2010}}
 
-
 @article{Serge,
 	Author = {Serge P. Hoogendoorn and Piet H.L. Bovy},
 	Date-Added = {2016-03-29 03:11:45 +0000},
 	Date-Modified = {2016-03-29 03:14:31 +0000},
 	Journal = {Journal of Systems and Control Engineering},
 	Title = {State-of-the-art of Vehicular Traffic Flow Modelling}}
+	
+@Misc{reactfx,
+title = {"ReactFX"},
+author = {TomasMikula},
+howpublished = {\url{https://github.com/TomasMikula/ReactFX}},
+month = {January},
+year = {2016},
+note = {Accessed: 28 March 2016},
+}
+
+@Misc{rxjava,
+title = {"RxJava"},
+author = {ReactiveX},
+howpublished = {\url{https://github.com/ReactiveX/RxJava}},
+month = {March},
+year = {2016},
+note = {Accessed: 28 March 2016},
+}
+@Misc{rxjavafx,
+title = {"RxJavaFX"},
+author = {ReactiveX},
+howpublished = {\url{https://github.com/ReactiveX/RxJavaFX}},
+month = {March},
+year = {2016},
+note = {Accessed: 28 March 2016},
+}
+@Misc{reactivex,
+title = {Observable},
+author = {ReactiveX},
+howpublished = {\url{http://reactivex.io/documentation/observable.html}},
+note = {Accessed: 28 March 2016},
+}
 
