add something for GeneralEvaluation part

--- a/Reports/Final/Drafts/jia.tex
+++ b/Reports/Final/Drafts/jia.tex
@@ -47,4 +47,26 @@ At the program level, Mingle sends us alerts so that everyone can follow up. we 
 \subsection{Github}
 IntelliJ is our main platform for coding. We use Github as our main source-code repository. We have a master branch and four personal branches. Everyone is free to experiment and commit changes. Anything in the master branch is always deployable. Branch won't be merged until it's ready to be reviewed by master. Once we have done our tasks we may make a commit so that others can follow to understand after pulling. We would add an associated commit message, which is a description explaining why a particular change was made to make it clear for others what we have done. Master branch would close a merge and we could also rolled  back changes if a bug found since each commit is considered a separate unit of change.
 
+\section{General Project Evaluation}
+\subsection{things that went well}
+We have clear goals for each development stage like what must/should/could be achieved for each iteration. Before and after each iteration we would check and make sure everything has been achieved. This enables our entire development process is progressing well. By following Agile development principles, our team did a good job responding to unpredictability through incremental, iterative work cadences. 
+
+From the perspective of software development, we strictly adhered to the MVC architecture. And we have clear hierarchical model structures, e.g., a map contains roads and intersections, traffic light and lane are owned by intersection and road respectively.
+
+From the simulation level, we added different vehicle behaviors. Except for normal type of vehicle -- Car, we added Ambulance whose behavior is aggressive. These make our simulation system closer to real traffic conditions.
+
+We made the system an user-friendly application. Users can monitor and control the simulaiion  process by going into simulation mode. The map maker mode allows users to design maps with any dimensions or map components. A simulation log is available after each simulation for users to analysis the whole simulation process. 
+
+\subsection{Things that did not go well and what we did}
+animation 
+
+ticker
+ 
+pre-made map: traffic light
+
+resizefactor
+
+\subsection{Possibilities for the future}
+It is impossible to achieve all implementation issues because of short term. In the future, we can add more vehicle types like police car, bicycle, bus, etc. as well as more road types including railroad,overpass. There can be arc intersections instead of cross intersections. We can make our system well adapt to real maps like Google map. By real-time location users can get traffic situation through our system. By connecting background log files to real maps, it is possible to deliver these log files to traffic monitor stations for furthter-step traffic analysis.
+
 \end{document}
